Branding alignment fix

--- a/mdpost/wwwroot/assets/css/styles.css
+++ b/mdpost/wwwroot/assets/css/styles.css
@@ -10,6 +10,7 @@ body {
   color: #000;
   font-weight: 800;
   font-family: 'Roboto';
+  margin-bottom: 3px;
 }
 
 #menu .navbar-toggler {
